discussion/kv_engine/163750/163750_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48467: Add config for magma MinCheckpointCreationInterval

During data load, checkpoint creation gets very
agressive due to the data size being small and checkpoint
threashold being 2%. MinCheckpointCreationInterval will
limit checkpoint creation to a more reasonable rate.

Also set it to zero for rollbakc tests, since they create
a checkpoint every batch.

Change-Id: If09b7fd6d7615a583d8f99c050682c66b1842727

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Apaar gupta
Date: 2021-10-17 06:56:22.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-17 07:09:14.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41199/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\ep_testsuite_dcp.cc(8444): error C2146: syntax error: missing ")" before identifier "prepare_skip_broken_under_rocks" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41199/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13526/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8432:9: error: no matching constructor for initialization of "TestCase" [clang-diagnostic-error]
        TestCase("test chk manager rollback",
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:129:5: note: candidate constructor not viable: requires at least 7 arguments, but 6 were provided
    TestCase(const char* _name,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:127:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 6 were provided
class TestCase : public BaseTestCase {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:127:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 6 were provided
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8444:18: error: expected ")" [clang-diagnostic-error]
                 prepare_skip_broken_under_rocks,
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8432:17: note: to match this "("
        TestCase("test chk manager rollback",
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13526/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8432:9:
error: no matching constructor for initialization of "TestCase" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13526/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3158/ : FAILURE

Compile error at [2021-10-17T07:00:28.662Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8444:18:
error: expected ")"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3158/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15412/ : FAILURE

Compile error at [2021-10-17T06:59:36.975Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8432:17:
error: expected primary-expression before ?(? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15412/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15134/ : FAILURE

Compile error at [2021-10-17T07:01:00.532Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8432:17:
error: expected primary-expression before ?(? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15134/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16053/ : FAILURE

Compile error at [2021-10-17T07:00:14.646Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8444:18:
error: expected ")"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16053/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14291/ : FAILURE

Compile error at [2021-10-17T07:02:21.221Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8444:18:
error: expected ")"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14291/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23454/ : FAILURE

Compile error at [2021-10-17T07:02:14.618Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8444:18:
error: expected ")"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23454/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3227/ : FAILURE

Compile error at [2021-10-17T07:01:21.080Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:8432:17:
error: expected primary-expression before ?(? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3227/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35016/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12319/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
